--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,6 +6,7 @@ html, body {
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 10pt;
 }
+
 div#main {
   margin: 0;
   padding: 0 20px 20px;
@@ -44,6 +45,13 @@ table#movies th {
   font-weight: bold;
   background-color: wheat;
 }
+table#movies th.hilite {
+  background-color: yellow;
+}
+
+
+
+
 table#movies th, table#movies td {
   padding: 4px;
   text-align: left;
